<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="152dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_rect_border"
                android:backgroundTint="#FAB4AF"
                android:gravity="center"
                android:text="@string/UI_request_permission"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <EditText
                android:id="@+id/editTextSubject"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_rect_border"
                android:hint="@string/UI_subject"
                android:inputType="textPersonName"
                android:autofillHints="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/UI_request_for_permission_hint"
                />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="179dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_rect_border"
                android:hint="@string/UI_request_message"
                android:inputType="textMultiLine"
                android:autofillHints=""/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_margin="10dp"
                android:accessibilityLiveRegion="assertive"
                android:background="@drawable/textview_rect_border"
                android:hint="@string/Your_Email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <Button
                android:id="@+id/submitEmailButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="237dp"
                android:layout_height="64dp"
                android:text="@string/UI_finish"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>