<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainmenufragments.BrowseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:id="@+id/browse_constraint_layout"
        />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/switch_map_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_baseline_map_24"
            tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>