...
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/details_scroll_view">
        <LinearLayout
            android:id="@+id/details_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

...
